# telefonoroto

./: README.md  TMP.txt  dabatase-dump.json  env.example.ini  main.py  poetry.toml  pyproject.toml
docs/: TelefonoRoto_app-demo_sequence.xml
